hphp/hack/test/typecheck/case_type/recursive/subtyping_mutual3c.php.exp
ERROR: File "subtyping_mutual3c.php", line 29, characters 5-6:
Invalid argument (Typing[4110])
  File "subtyping_mutual3c.php", line 10, characters 26-26:
  Expected `A`
  File "subtyping_mutual3c.php", line 6, characters 20-20:
  But got `mixed`
ERROR: File "subtyping_mutual3c.php", line 29, characters 5-6:
Invalid argument (Typing[4110])
  File "subtyping_mutual3c.php", line 10, characters 26-26:
  Expected `A`
  File "subtyping_mutual3c.php", line 6, characters 20-20:
  But got `nonnull`
ERROR: File "subtyping_mutual3c.php", line 32, characters 5-6:
Invalid argument (Typing[4110])
  File "subtyping_mutual3c.php", line 11, characters 26-26:
  Expected `B`
  File "subtyping_mutual3c.php", line 6, characters 20-20:
  But got `mixed`
ERROR: File "subtyping_mutual3c.php", line 32, characters 5-6:
Invalid argument (Typing[4110])
  File "subtyping_mutual3c.php", line 11, characters 26-26:
  Expected `B`
  File "subtyping_mutual3c.php", line 6, characters 20-20:
  But got `nonnull`
ERROR: File "subtyping_mutual3c.php", line 35, characters 5-6:
Invalid argument (Typing[4110])
  File "subtyping_mutual3c.php", line 12, characters 29-34:
  Expected `vec<A>`
  File "subtyping_mutual3c.php", line 6, characters 20-20:
  But got `mixed`
ERROR: File "subtyping_mutual3c.php", line 38, characters 5-6:
Invalid argument (Typing[4110])
  File "subtyping_mutual3c.php", line 13, characters 29-34:
  Expected `vec<B>`
  File "subtyping_mutual3c.php", line 6, characters 20-20:
  But got `mixed`
ERROR: File "subtyping_mutual3c.php", line 45, characters 5-6:
Invalid argument (Typing[4110])
  File "subtyping_mutual3c.php", line 11, characters 26-26:
  Expected `B`
  File "subtyping_mutual3c.php", line 4, characters 16-16:
  But got `mixed`
ERROR: File "subtyping_mutual3c.php", line 45, characters 5-6:
Invalid argument (Typing[4110])
  File "subtyping_mutual3c.php", line 11, characters 26-26:
  Expected `B`
  File "subtyping_mutual3c.php", line 4, characters 16-16:
  But got `nonnull`
ERROR: File "subtyping_mutual3c.php", line 75, characters 12-15:
Invalid argument (Typing[4110])
  File "subtyping_mutual3c.php", line 8, characters 19-19:
  Expected `A`
  File "subtyping_mutual3c.php", line 24, characters 3-15:
  But got `vec<vec<int>>`
ERROR: File "subtyping_mutual3c.php", line 76, characters 12-15:
Invalid argument (Typing[4110])
  File "subtyping_mutual3c.php", line 9, characters 19-19:
  Expected `B`
  File "subtyping_mutual3c.php", line 24, characters 3-15:
  But got `vec<vec<int>>`
ERROR: File "subtyping_mutual3c.php", line 77, characters 15-18:
Invalid argument (Typing[4110])
  File "subtyping_mutual3c.php", line 10, characters 26-26:
  Expected `A`
  File "subtyping_mutual3c.php", line 24, characters 7-14:
  But got `vec<int>`
ERROR: File "subtyping_mutual3c.php", line 78, characters 15-18:
Invalid argument (Typing[4110])
  File "subtyping_mutual3c.php", line 11, characters 26-26:
  Expected `B`
  File "subtyping_mutual3c.php", line 24, characters 7-14:
  But got `vec<int>`
